--- a/style.css
+++ b/style.css
@@ -6,8 +6,22 @@ padding: 0;}
     height: 100vh;
     width: auto;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    
+}
+.button{
+    align-self: center;
+    justify-content: center;
+    
+
+}
+.tela{
+    border: 1px solid whitesmoke;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .canva{
@@ -17,7 +31,6 @@ padding: 0;}
     display: grid;
     grid-column: 1fr;
     grid-row: 1fr 1fr;
-
 }
 
 .ceu{
@@ -64,7 +77,28 @@ border-color: white;
     position: relative;
 }
 
-.fixo1{
+.n2{
+    margin-top: 75px;
+    position: relative;
+}
+
+.n3{
+    margin-top: 25px;
+    position: relative;
+}
+
+.n4{
+    margin-top: 50px;
+    position: relative;
+
+}
+
+.n5{
+    margin-top: 15px;
+    position: relative;
+}
+
+.fixo1, .fixo2, .fixo3, .fixo4, .fixo5 {
     position: absolute;
     height: 100%;
     width: 100%;    
@@ -75,90 +109,51 @@ border-color: white;
     justify-content: space-between;
 }
 
-.n2{
-    margin-top: 75px;
-    position: relative;
+.window{
+    background-color: #d9ffff;
 }
-
-.fixo2{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-between;
-}
-
-.n3{
-    margin-top: 25px;
-    position: relative;
-}
-
-.fixo3{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-between;
-}
-.n4{
-    margin-top: 50px;
-    position: relative;
-
-}
-.fixo4{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-between;
-}
-
-.n5{
-    margin-top: 15px;
-    position: relative;
-}
-
-.fixo5{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-between;
-}
-    
+   
 .w1{
     margin-top: 15px;
-    background-color: #d9ffff;
     height: 25px;
     width: 25px;
 }
 .w2{
-    background-color: #d9ffff;
     height: 25px;
     width: 25px;
 }
 .w3{
-    background-color: #d9ffff;
     height: 25px;
     width: 25px;
 }
 .w4{
-    background-color: #d9ffff;
     height: 40px;
     width: 25px;
 }
 
+#meuBotao{
+    width: 100px;
+    height: 100px;
+    margin: 50px;
+    border-radius: 50px;
+    background-image: url(./icone/lua-e-estrelas.png);
+    background-size: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+
+}
+#meuBotao2{
+    width: 100px;
+    height: 100px;
+    margin: 50px;
+    border-radius: 50px;
+    background-image: url(./icone/sun.png);
+    background-size: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+
+}
 
 
